discussion/kv_engine/181149/181149_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53920: CheckpointQuota accounts detached checkpoints

Since when introduced, the CheckpointQuota accounts the memory usage of
checkpoints owned by CM. Ie, detached-to-be-destroyed checkpoints
(owned by CheckpointDestroyer) aren't accounted.

The problem with that approach is that in the case of slow checkpoint
deallocation (for whatever reason), the checkpoint allocation in
Destroyers can take up to the entire BucketQuota.

With this patch we change CheckpointQuota to accounting mem-alloc in
Destroyers too. The consequence is that the system will enter a TempOOM
phase when checkpoint allocation is high (usual CheckpointQuota
rules apply), regardless of what's owning those checkpoints.

Note that this change has implications in the way we perform memory
recovery from CM. By that:

  a. If the memory releasable by detached-to-be-destroyed checkpoints
     allows to push the overall checkpoint alloc down to the lower_mark
     (which is our usual target), then the CheckpointMemRecoveryTask
     isn't woken up at all
  b. Otherwise, the CheckpointMemRecoveryTask is scheduled to run as
     usual, but now it attempts mem-releasing from CM only to the extent
     of what needs to be freed on top of detached-to-be-destroyed
     checkpoints

That is mainly for avoiding excessive ItemExpel/CursorDrop on CM, when
CM isn't the problematic component.

Note: This change might possibly make visible any suboptimal behaviour
on checkpoint mem-releasing in Destroyers. In case, that is expected to
show up as the system entering TempOOM phases in a state where the
Destroyer-alloc component is prevalent compared to CM-alloc.
Regardless of that, optimizations in the Destroyer deallocation area
are already in-progress in MB-53531.

Change-Id: I8540b7781b0929ea6006e1522ee3fe35f19d93ef

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-10-28 15:24:37.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-28 15:47:08.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50813/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50813/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11409/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11409/ )

Test exceeded the timeout:
[2022-10-28T15:41:31.736Z] Running [159/160]: test bucket quota reduction.../usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11409/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/325/ : ABORTED

Failure of an engine_testapp test:

<pre>
Running [159/160]: test bucket quota reduction.../usr/bin/timeout: the monitored command dumped core
[2022-10-28T15:41:35.606Z] 
[2022-10-28T15:41:35.606Z] 
[2022-10-28T15:41:35.606Z] 98% tests passed, 8 tests failed out of 465
[2022-10-28T15:41:35.606Z] 
[2022-10-28T15:41:35.606Z] Total Test time (real) = 718.58 sec
[2022-10-28T15:41:35.606Z] 
[2022-10-28T15:41:35.606Z] The following tests FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/325/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/325/ )

Test exceeded the timeout:
[2022-10-28T15:34:26.092Z] Running [159/160]: test bucket quota reduction.../usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/325/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24863/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24863/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23624/ : ABORTED

Failure of an engine_testapp test:

<pre>
Running [159/160]: test bucket quota reduction...
[2022-10-28T15:46:59.521Z] 
[2022-10-28T15:46:59.521Z] 
[2022-10-28T15:46:59.522Z] 99% tests passed, 6 tests failed out of 444
[2022-10-28T15:46:59.522Z] 
[2022-10-28T15:46:59.522Z] Total Test time (real) = 455.88 sec
[2022-10-28T15:46:59.522Z] 
[2022-10-28T15:46:59.522Z] The following tests FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23624/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23624/ )

Test exceeded the timeout:
[2022-10-28T15:46:12.764Z] Running [159/160]: test bucket quota reduction.../usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23624/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23055/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23055/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32049/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32049/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21589/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_remover_test.cc:1162:40: error: no member named "HasSubstr" in namespace "testing" [clang-diagnostic-error]
        EXPECT_THAT(e.what(), testing::HasSubstr("failed fetchNextTask"));
                                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21589/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_remover_test.cc:1162:40:
error: no member named "HasSubstr" in namespace "testing" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21589/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11318/ : FAILURE

Compile error at [2022-10-28T15:27:21.763Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_remover_test.cc:1162:40:
error: no member named "HasSubstr" in namespace "testing"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11318/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24034/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [159/160]: test bucket quota reduction.../usr/bin/timeout: the monitored command dumped core
[2022-10-28T15:40:51.355Z] 
[2022-10-28T15:40:51.355Z] 
[2022-10-28T15:40:51.355Z] 98% tests passed, 7 tests failed out of 464
[2022-10-28T15:40:51.355Z] 
[2022-10-28T15:40:51.355Z] Total Test time (real) = 478.35 sec
[2022-10-28T15:40:51.355Z] 
[2022-10-28T15:40:51.355Z] The following tests FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24034/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24034/ )

Test exceeded the timeout:
[2022-10-28T15:38:09.719Z] Running [159/160]: test bucket quota reduction.../usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24034/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20862/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42654/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
